# platform.adaptation.ap_samsung.libomxil-e54xx

./: AUTHORS  Makefile.am  NOTICE  configure.ac  omxil-e54xx.pc.in  srp.pc.in
debian/: changelog  control  copyright  libomxil-e4x12-dev.install.in  libomxil-e4x12.install.in  rules
exynos/: Makefile.am
exynos/include/: csc.h  exynos_v4l2.h  videodev2.h  videodev2_exynos_media.h
exynos/kernel_header/: v4l2-mediabus.h  v4l2-subdev.h
exynos/libcsc/: Android.mk  Makefile.am  csc.c  csc_helper.c
exynos/libv4l2/: Android.mk  Makefile.am  exynos_mc.c  exynos_subdev.c  exynos_v4l2.c
exynos4/: Makefile.am
exynos4/include/: ion.h
exynos4/libcodec/: Makefile.am
exynos4/libcodec/audio/: Makefile.am
exynos4/libcodec/audio/alp/: Makefile.am
exynos4/libcodec/audio/alp/dec/: srp_api.c
exynos4/libcodec/audio/alp/include/: srp_api.h  srp_error.h
exynos4/libcodec/video/: Makefile.am
exynos4/libcodec/video/v4l2/: Android.mk  Makefile.am
exynos4/libcodec/video/v4l2/dec/: ExynosVideoDecoder.c
exynos4/libcodec/video/v4l2/enc/: ExynosVideoEncoder.c
exynos4/libcodec/video/v4l2/include/: ExynosVideoApi.h  ExynosVideoEnc.h
exynos4/libion_exynos/: Android.mk  Makefile.am  libion.c
exynos4/libswconverter/: Android.mk  Makefile.am  swconvertor.c
lib/: libcsc.so.0  libcsc.so.0.0.0
lib/mobile/: libExynosOMX_Adec.so.0.0.0  libExynosOMX_Basecomponent.so.0.0.0  libExynosOMX_Core.so.0.0.0  libExynosOMX_OSAL.so.0.0.0  libExynosOMX_Resourcemanager.so.0  libExynosOMX_Resourcemanager.so.0.0.0  libExynosOMX_Venc.so.0.0.0  libsrpapi.so.0.0.0  libswconverter.so.0.0.0
lib/tv/: libExynosOMX_OSAL.so.0.0.0  libExynosOMX_Vdec.so.0.0.0  libExynosVideoApi.so.0.0.0  libexynosv4l2.so.0.0.0  libion_exynos.so.0.0.0  libswconverter.so.0
openmax/: Android.mk  Makefile.am
openmax/component/: Makefile.am
openmax/component/audio/: Makefile.am
openmax/component/audio/dec/: Exynos_OMX_Adec.c  Makefile.am
openmax/component/audio/dec/mp3/: Exynos_OMX_Mp3dec.c  Exynos_OMX_Mp3dec.h  Makefile.am
openmax/component/common/: Exynos_OMX_Basecomponent.c  Exynos_OMX_Basecomponent.h  Exynos_OMX_Baseport.c  Exynos_OMX_Baseport.h  Exynos_OMX_Resourcemanager.c  Makefile.am
openmax/component/video/: Makefile.am
openmax/component/video/dec/: Exynos_OMX_Vdec.c  Exynos_OMX_Vdec.h  Exynos_OMX_VdecControl.c  Exynos_OMX_VdecControl.h  Makefile.am
openmax/component/video/dec/h264/: Android.mk  Exynos_OMX_H264dec.c  Exynos_OMX_H264dec.h  Makefile.am
openmax/component/video/dec/mpeg2/: Android.mk  Exynos_OMX_Mpeg2dec.c  Exynos_OMX_Mpeg2dec.h  Makefile.am
openmax/component/video/dec/mpeg4/: Android.mk  Exynos_OMX_Mpeg4dec.c  Exynos_OMX_Mpeg4dec.h  Makefile.am
openmax/component/video/dec/vc1/: Android.mk  Exynos_OMX_Wmvdec.c  Exynos_OMX_Wmvdec.h  Makefile.am
openmax/component/video/enc/: Exynos_OMX_Venc.c  Exynos_OMX_Venc.h  Exynos_OMX_VencControl.c  Exynos_OMX_VencControl.h  Makefile.am
openmax/component/video/enc/h264/: Exynos_OMX_H264enc.c  Exynos_OMX_H264enc.h  Makefile.am
openmax/component/video/enc/mpeg4/: Exynos_OMX_Mpeg4enc.c  Exynos_OMX_Mpeg4enc.h  Makefile.am
openmax/core/: Exynos_OMX_Core.h  Makefile.am
openmax/include/exynos/: Exynos_OMX_Def.h  Exynos_OMX_Macros.h
openmax/osal/: Android.mk  Exynos_OSAL_Log.c  Exynos_OSAL_Log.h  Exynos_OSAL_Memory.c  Exynos_OSAL_Platform_Specific.c  Exynos_OSAL_Platform_Specific.h  Exynos_OSAL_Semaphore.c  Exynos_OSAL_SharedMemory.c  Makefile.am
packaging/: libomxil-e54xx.spec
